--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
         <div class="nav-links">
             <i class="fa fa-bars" onclick="toggleMenu()"></i>
-            <a href="#hero-section" class="hero-link">lemonade stand</a>
+            <a href="#hero-section" class="hero-link">lemonade stand 1</a>
     
             <div id="nav-links-sub">
             <ul>
