--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lemonade Stand10</title>
+    <title>lemonade Stand 1</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -23,7 +23,7 @@
         <nav>
         <div class="nav-links">
             <i class="fa fa-bars" onclick="toggleMenu()"></i>
-            <a href="#hero-section" class="hero-link">lemonade stand 1</a>
+            <a href="#hero-section" class="hero-link">lemonade stand</a>
     
             <div id="nav-links-sub">
             <ul>
